--- a/src/main/resources/lang/lang_zh_CN.yml
+++ b/src/main/resources/lang/lang_zh_CN.yml
@@ -20,6 +20,7 @@ commands:
     ore_chances_title: "&6==== 矿石生成概率 ===="
     ore_chance: "&e - {ore}: &f{chance}% &7({percentage}%)"
     total_chance: "&e总概率: &f{total}%"
+    world_patterns: "&e世界匹配模式: &f{patterns}"
   help:
     title: "&6==== KaGeneration 插件帮助 ===="
     reload: "&e/kg reload &f- 重载插件配置"
@@ -47,8 +48,8 @@ logs:
   disable: "&c插件已禁用"
   placeholder_hooked: "已挂钩到 PlaceholderAPI"
   worlds:
-    all: "未配置世界白名单，将在所有世界生效"
-    specific: "已启用世界白名单: {worlds}"
+    all: "未配置世界匹配模式，将在所有世界生效"
+    specific: "已启用世界匹配模式: {patterns}"
   config_reload_failed: "配置重载失败: {error}"
 
 # 状态文本
