矿石名称多语言化

--- a/src/main/resources/lang/lang_en_US.yml
+++ b/src/main/resources/lang/lang_en_US.yml
@@ -18,7 +18,7 @@ commands:
     default_group: "Default Group"
     no_ore_config: "&cNo ore configuration found for this group"
     ore_chances_title: "&6==== Ore Generation Chances ===="
-    ore_chance: "&e - {ore}: &f{chance}% &7({percentage}%)"
+    ore_chance: "&7- &f{ore}: &e{chance} &7({percentage}%)"
     total_chance: "&eTotal Chance: &f{total}%"
     world_patterns: "&eWorld Matching Patterns: &f{patterns}"
   help:
@@ -61,3 +61,39 @@ logs:
 status:
   enabled: "&aEnabled"
   disabled: "&cDisabled"
+
+customize:
+  level:
+    default: "Lv.0"
+    level1: "Lv.1"
+    level2: "Lv.2"
+    level3: "Lv.3"
+    level4: "Lv.4"
+    level5: "Lv.5"
+  ore:
+    stone: "Stone"
+    ancient_debris: "Ancient Debris"
+    diamond_ore: "Diamond Ore"
+    deepslate_diamond_ore: "Deepslate Diamond Ore"
+    deepslate_lapis_ore: "Deepslate lapis ore"
+    lapis_ore: "Lapis ore"
+    deepslate_emerald_ore: "Deepslate emerald ore"
+    emerald_ore: "Emerald ore"
+    deepslate_redstone_ore: "Deepslate redstone ore"
+    redstone_ore: "Redstone ore"
+    deepslate_gold_ore: "Deepslate gold ore"
+    gold_ore: "Gold ore"
+    deepslate_copper_ore: "Deepslate copper ore"
+    copper_ore: "Copper ore"
+    deepslate_iron_ore: "Deepslate iron ore"
+    iron_ore: "Iron ore"
+    deepslate_coal_ore: "Deepslate coal ore"
+    coal_ore: "Coal ore"
+    coal_block: "Coal block"
+    raw_iron_block: "Raw iron block"
+    raw_copper_block: "Raw copper block"
+    raw_gold_block: "Raw gold block"
+    nether_gold_ore: "Nether gold ore"
+    nether_quartz_ore: "Nether quartz ore"
+    ia:tin_ore: "Tin ore"
+    ia:cobalt_ore: "Cobalt ore"
