--- a/src/main/resources/lang/lang_zh_CN.yml
+++ b/src/main/resources/lang/lang_zh_CN.yml
@@ -18,7 +18,7 @@ commands:
     default_group: "默认组"
     no_ore_config: "&c未找到该组的矿石配置"
     ore_chances_title: "&6==== 矿石生成概率 ===="
-    ore_chance: "&e - {ore}: &f{chance}% &7({percentage}%)"
+    ore_chance: "&7- &f{ore}: &e{chance} &7({percentage}%)"
     total_chance: "&e总概率: &f{total}%"
     world_patterns: "&e世界匹配模式: &f{patterns}"
   help:
@@ -61,3 +61,39 @@ logs:
 status:
   enabled: "&a启用"
   disabled: "&c禁用"
+
+customize:
+  level:
+    default: "Lv.0"
+    level1: "Lv.1"
+    level2: "Lv.2"
+    level3: "Lv.3"
+    level4: "Lv.4"
+    level5: "Lv.5"
+  ore:
+    stone: "石头"
+    ancient_debris: "远古残骸"
+    diamond_ore: "钻石矿石"
+    deepslate_diamond_ore: "深层钻石矿石"
+    deepslate_lapis_ore: "深层青金石矿石"
+    lapis_ore: "青金石矿石"
+    deepslate_emerald_ore: "深层绿宝石矿石"
+    emerald_ore: "绿宝石矿石"
+    deepslate_redstone_ore: "深层红石矿石"
+    redstone_ore: "红石矿石"
+    deepslate_gold_ore: "深层金矿石"
+    gold_ore: "金矿石"
+    deepslate_copper_ore: "深层铜矿石"
+    copper_ore: "铜矿石"
+    deepslate_iron_ore: "深层铁矿石"
+    iron_ore: "铁矿石"
+    deepslate_coal_ore: "深层煤矿石"
+    coal_ore: "煤矿石"
+    coal_block: "煤炭块"
+    raw_iron_block: "粗铁块"
+    raw_copper_block: "粗铜块"
+    raw_gold_block: "粗金块"
+    nether_gold_ore: "下界金矿石"
+    nether_quartz_ore: "下界石英矿石"
+    ia:tin_ore: "锡矿石"
+    ia:cobalt_ore: "钴矿石"
